--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
-@import url('./assets/thewinter.ttf');
 @font-face {
   font-family: 'Janges';
   src: url('./assets/Janges-Regular.ttf') format('ttf'),
@@ -12,8 +11,8 @@
 }
 @font-face {
   font-family: 'The Winter';
-  src: url('./assets/thewinter.ttf') format('ttf'),
-       url('./assets/thewinter.otf') format('otf');
+  src: 
+  url('./assets/The Winter.otf') format('otf'),url('./assets/The Winter.ttf') format('ttf');
   font-weight: normal;
   font-style: normal;
 }
