--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,7 @@
   font-weight: normal;
   font-style: normal;
 }
-@font-face {
-  font-family: 'The Winter';
-  src: 
-  url('./assets/The Winter.otf') format('otf'),url('./assets/The Winter.ttf') format('ttf');
-  font-weight: normal;
-  font-style: normal;
-}
+@import url('https://fonts.cdnfonts.com/css/the-winter');
 body {
   margin: 0;
   padding: 0;
@@ -70,7 +64,7 @@ img {
 }
 
 .nombre {
-  font-family: 'The Winter', serif;
+  font-family: 'The winter', serif;
   font-size: 9rem;
   font-weight: 400;
   color: #C9961A;
