--- a/styles.css
+++ b/styles.css
@@ -39,14 +39,9 @@ img {
     margin: 40px 0;
 }
 .invitation .titulo p {
-    font-weight: 600;
-    font-size: 1.2rem;
-    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 1.5rem;
     margin: 0;
-}
-
-.invitation .titulo p::first-letter {
-    font-size: 1.35rem; 
 }
 
 .nombre {
@@ -54,7 +49,7 @@ img {
   font-size: 9rem;
   font-weight: 400;
   color: #C9961A;
-  margin: 60px 0 30px 0 ;
+  margin: 30px 0 30px 0 ;
 }
 
 .info {
@@ -245,7 +240,7 @@ button:hover {
   appearance: none;
   width: 100%;
   font-size: 1.15rem;
-  padding: 0.675em 6em 0.675em 1em;
+  padding: 0.675em 2em 0.675em 1em;
   background-color: #fff;
   border: 1px solid #caced1;
   border-radius: 0.25rem;
@@ -357,15 +352,10 @@ button:hover {
   }
 
   .invitation .titulo p {
-    font-weight: 600;
-    font-size: 0.9rem;
-    text-transform: uppercase;
+    font-size: 1.2rem;
     margin: 0;
   }
 
-  .invitation .titulo p::first-letter {
-      font-size: 1.0rem; 
-  }
 
   .fecha p {
     margin: 40px 0px 30px 0px;
@@ -435,6 +425,16 @@ button:hover {
 
   .rsvp {
     margin: 30px 5px;
+  }
+
+  .seleccion select {
+    padding: 0.675em 1em 0.675em 1em;
+  }
+  
+  .seleccion::before,
+  .seleccion::after {
+    --size: 0.2rem;
+    right: 0.8rem;
   }
 }
 .info {
